# waste-stream

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml  noisy_labels.yaml  semi_supervised.yaml  supervised_baseline.yaml
data/: README.md  download_zerowaste.sh
notebooks/: 01_data_exploration.ipynb  02_results_analysis.ipynb  03_qualitative_examples.ipynb
runs/detect/results/semi_sup_smoke/round0/: args.yaml  results.csv
runs/detect/results/semi_sup_smoke/round1/: args.yaml  results.csv
runs/detect/results/semi_sup_smoke/round2/: args.yaml  results.csv
runs/detect/results/semi_sup_smoke/round3/: args.yaml  results.csv
runs/detect/results/semi_sup_smoke/round4/: args.yaml  results.csv
runs/detect/results/semi_sup_smoke/round5/: args.yaml  results.csv
runs/detect/results/semi_sup_smoke/round6/: args.yaml  results.csv
runs/detect/results/smoke_test/: args.yaml  results.csv
runs/detect/results/supervised_10pct/: args.yaml  results.csv
runs/detect/results/supervised_10pct-2/: args.yaml  results.csv
runs/detect/results/supervised_10pct-3/: args.yaml  results.csv
scripts/: evaluate.py  generate_figures.py  run_ablations.sh  train_semi_supervised.py  train_supervised.py
src/data/: __init__.py  label_noise.py  split.py  transforms.py  zerowaste.py
src/evaluation/: __init__.py  metrics.py  visualise.py
src/models/: __init__.py  detector.py  ema.py
src/training/: __init__.py  losses.py  semi_supervised.py  supervised.py
src/utils/: __init__.py  config.py  logging.py  seed.py
(+8 files in other folders)
