[project]
name = "zerowaste-semi-supervised"
version = "0.1.0"
description = "Semi-supervised object detection for waste stream analysis on ZeroWaste"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Joe Smith", email = "j.smith57@newcastle.ac.uk" },
]
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "ultralytics>=8.0",
    "albumentations>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "tensorboard>=2.13",
    "pycocotools>=2.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "tqdm>=4.65",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
